*
* 2.1.1
*

- XEN monitoring subagent
- Fixed issues with agent tunnels
- Fixed bug in STP-based topology discovery
- Management console:
	- Improved status map


*
* 2.1
*

- Improved audit logging
- Improved data reconciliation between agent and server
- Improved Grafana integration
- Server detects changes in installed packages during configuration poll
- Added MariaDB database driver
- Fixed excessive CPU usage by agent on AIX
- nxshell can connect to server on non-standard port
- Driver for Netonix switches
- NXSL:
	- New methods for arrays: append, insert, pop, push, remove
	- Table methods get and set can accept column name instead of column index
	- Table row method get can accept column name instead of column index
	- Added table row method set
	- Access to DCI owner object in data collection and instance discovery scripts via $targetObject variable
- Management console:
	- Improved layout of dashboard elements
	- Added option to indicate alarm severity with background color in alarm list
	- Fixed bug in folder download in file manager
	- Proper support for ANSI colors in object tools output in web UI
	- Object dragging on map disabled if user don't have write access to map object
	- Option to hide sub-interfaces in UI (currently works only for Juniper switches)
- Fixed issues: NX-1039, NX-1041, NX-1166, NX-1180, NX-1194, NX-1195, NX-1212, NX-1214, NX-1215, NX-1234, NX-1236, NX-1243, NX-1244, NX-1251, NX-1253, NX-1256, NX-1257, NX-1260, NX-1262, NX-1264


*
* 2.1-RC1
*

- External tables in agent
- Script source for table DCIs
- Driver for IgniteNet devices
- Network device database (allows some device specific information to be provided without drivers)
- Server certificate's key can be stored in separate file
- Multiple CA certificates can be specified in server configuration file
- Number of samples can be configured for table thresholds
- Null value can be used as "no change" option in auto bind scripts
- Grafana integration
- Management console: