@@ -1,10 +1,10 @@
 lib_LTLIBRARIES = libnxsl.la
 libnxsl_la_SOURCES = lex.parser.cpp parser.tab.cpp \
 		     array.cpp class.cpp compiler.cpp env.cpp functions.cpp \
-                     geolocation.cpp hashmap.cpp instruction.cpp iterator.cpp \
-		     lexer.cpp library.cpp main.cpp network.cpp program.cpp \
-		     selectors.cpp stack.cpp storage.cpp table.cpp value.cpp \
-		     variable.cpp vm.cpp
+                     geolocation.cpp hashmap.cpp inetaddr.cpp instruction.cpp \
+                     iterator.cpp lexer.cpp library.cpp main.cpp network.cpp \
+                     program.cpp selectors.cpp stack.cpp storage.cpp \
+                     table.cpp value.cpp variable.cpp vm.cpp
 libnxsl_la_CPPFLAGS=-I@top_srcdir@/include
 libnxsl_la_LDFLAGS = -version-info $(NETXMS_LIBRARY_VERSION)
 libnxsl_la_LIBADD = ../libnetxms/libnetxms.la
